# pikchrmirror

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yaml
.github/workflows/: release.yaml  tag.yaml  test.yaml  unit-test.yaml
src/: main.rs  tests.rs
src/img/: mod.rs  png.rs  tests.rs
src/parser/: mod.rs  pikchr.rs
src/view/: edview.rs  mainview.rs  mod.rs  navbarview.rs  svgview.rs  tabview.rs
