[package]
name = "PikchrMirror"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.*"
pikchr = "0.1.*"
pretty_env_logger = "0.5.*"
xml-rs = "0.8.*"

[dependencies.resvg]
version = "0.44.*"

[dependencies.floem]
git = "https://github.com/lapce/floem"
# rev = "b9bcd24"
features = ["editor", "default-image-formats", "rfd-async-std"]
