[package]
name = "PikchrMirror"
version = "0.1.2"
edition = "2021"

[dependencies]
log = "0.4.*"
pikchr = "0.1.*"
pretty_env_logger = "0.5.*"
xml-rs = "0.8.*"

[dependencies.resvg]
version = "0.45.*"

[dependencies.floem]
git = "https://github.com/lapce/floem"
# rev = "b9bcd24"
features = ["editor", "default-image-formats", "rfd-async-std"]

[profile.release]
opt-level = "s" # or "z"
codegen-units = 1
lto = "thin" #alternatives "fat" or "false"
strip = "debuginfo"